--- a/frontend/pages/tutor-chats.html
+++ b/frontend/pages/tutor-chats.html
@@ -2,25 +2,33 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tutor | VivaEdu</title>
+  <title>Chats | Tutor</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-  <h1>Área do Tutor</h1>
+  <h1>Chats (Tutor)</h1>
 
   <nav>
+    <a href="tutor-home.html">Home</a> |
     <a href="tutor-aulas.html">Minhas Aulas</a> |
     <a href="tutor-materiais.html">Materiais</a> |
-    <a href="tutor-chats.html">Chats</a> |
     <button id="logoutBtn">Sair</button>
   </nav>
 
+  <hr>
+
+  <p><strong>Conversas recentes</strong></p>
+  <div id="listaChats"></div>
+
   <script src="../js/api.js"></script>
   <script src="../js/auth.js"></script>
-  <script src="../js/tutor-home.js"></script>
+  <script src="../js/tutor-chats.js"></script>
 </body>
 </html>
