--- a/frontend/pages/aluno-home.html
+++ b/frontend/pages/aluno-home.html
@@ -11,17 +11,19 @@
 </head>
 <body>
 
-  <h1>Área do Aluno</h1>
+<h1>Área do Aluno</h1>
 
-  <nav>
-    <a href="aluno-aulas.html">Aulas</a> |
-    <a href="aluno-agendamentos.html">Agendamentos</a> |
-    <a href="aluno-materiais.html">Materiais</a> |
-    <button id="logoutBtn">Sair</button>
-  </nav>
+<nav>
+  <a href="aluno-aulas.html">Aulas</a> |
+  <a href="aluno-agendamentos.html">Agendamentos</a> |
+  <a href="aluno-materiais.html">Materiais</a> |
+  <a href="perfil.html">Perfil</a> |
+  <button id="logoutBtn" type="button">Sair</button>
+</nav>
 
-  <script src="../js/api.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/aluno-home.js"></script>
+<script src="../js/api.js"></script>
+<script src="../js/auth.js"></script>
+<script src="../js/aluno-home.js"></script>
+
 </body>
 </html>
