--- a/frontend/pages/cadastro.html
+++ b/frontend/pages/cadastro.html
@@ -2,75 +2,41 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro | VivaEdu</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-  <h1>Cadastro VivaEdu</h1>
+<h1>Cadastro VivaEdu</h1>
 
-  <form id="cadastroForm">
+<form id="cadastroForm">
 
-    <input
-      type="text"
-      id="nome"
-      placeholder="Nome completo"
-      required
-    >
+  <input type="text" id="nome" placeholder="Nome completo" required>
+  <input type="text" id="cpf" placeholder="CPF (somente números)" required>
+  <input type="email" id="email" placeholder="E-mail" required>
+  <input type="email" id="confirmarEmail" placeholder="Confirme seu e-mail" required>
+  <input type="password" id="senha" placeholder="Senha" required>
+  <input type="password" id="confirmarSenha" placeholder="Confirme sua senha" required>
 
-    <input
-      type="text"
-      id="cpf"
-      placeholder="CPF (somente números)"
-      required
-      maxlength="14"
-    >
+  <select id="tipo" required>
+    <option value="ALUNO">Aluno</option>
+    <option value="TUTOR">Tutor</option>
+  </select>
 
-    <input
-      type="email"
-      id="email"
-      placeholder="E-mail"
-      required
-    >
+  <button type="submit">Cadastrar</button>
+</form>
 
-    <input
-      type="email"
-      id="confirmarEmail"
-      placeholder="Confirme seu e-mail"
-      required
-    >
+<p>
+  Já tem conta?
+  <a href="login.html">Voltar para login</a>
+</p>
 
-    <input
-      type="password"
-      id="senha"
-      placeholder="Senha"
-      required
-    >
-
-    <input
-      type="password"
-      id="confirmarSenha"
-      placeholder="Confirme sua senha"
-      required
-    >
-
-    <!-- Mantendo como estava: tipo de usuário (modo teste) -->
-    <select id="tipo" required>
-      <option value="ALUNO">Aluno</option>
-      <option value="TUTOR">Tutor</option>
-    </select>
-
-    <button type="submit">Cadastrar</button>
-
-  </form>
-
-  <p>
-    Já tem conta?
-    <a href="login.html">Voltar para login</a>
-  </p>
-
-  <script src="../js/api.js"></script>
-  <script src="../js/cadastro.js"></script>
+<script src="../js/api.js"></script>
+<script src="../js/cadastro.js"></script>
 
 </body>
 </html>
