--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -2,48 +2,38 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | VivaEdu</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-  <h1>VivaEdu</h1>
+<h1>VivaEdu</h1>
 
-  <form id="loginForm">
+<form id="loginForm">
+  <input type="email" id="email" placeholder="E-mail" required>
+  <input type="password" id="senha" placeholder="Senha" required>
 
-    <input 
-      type="email" 
-      id="email" 
-      placeholder="E-mail" 
-      required
-    >
+  <select id="tipo" required>
+    <option value="ALUNO">Aluno</option>
+    <option value="TUTOR">Tutor</option>
+  </select>
 
-    <input 
-      type="password" 
-      id="senha" 
-      placeholder="Senha" 
-      required
-    >
+  <button type="submit">Entrar</button>
+</form>
 
-    <!-- SELETOR DE TIPO (SÓ PARA TESTES, REMOVER DEPOIS) -->
-    <select id="tipo" required>
-      <option value="ALUNO">Aluno</option>
-      <option value="TUTOR">Tutor</option>
-    </select>
+<p>
+  Ainda não tem conta?
+  <a href="cadastro.html">Cadastre-se</a>
+</p>
 
-    <button type="submit">Entrar</button>
-
-  </form>
-
-  <p>
-    Ainda não tem conta?
-    <a href="cadastro.html">Cadastre-se</a>
-  </p>
-
-  <!-- IMPORTANTE: ORDEM DOS SCRIPTS -->
-  <script src="../js/api.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/login.js"></script>
+<script src="../js/api.js"></script>
+<script src="../js/auth.js"></script>
+<script src="../js/login.js"></script>
 
 </body>
 </html>
+
