--- a/frontend/pages/tutor-home.html
+++ b/frontend/pages/tutor-home.html
@@ -7,20 +7,23 @@
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tutor | VivaEdu</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-  <h1>Área do Tutor</h1>
+<h1>Área do Tutor</h1>
 
-  <nav>
-    <a href="tutor-aulas.html">Minhas Aulas</a> |
-    <a href="tutor-materiais.html">Materiais</a> |
-    <a href="tutor-chats.html">Chats</a> |
-    <button id="logoutBtn">Sair</button>
-  </nav>
+<nav>
+  <a href="tutor-aulas.html">Minhas Aulas</a> |
+  <a href="tutor-materiais.html">Materiais</a> |
+  <a href="tutor-chats.html">Chats</a> |
+  <a href="perfil.html">Perfil</a> |
+  <button id="logoutBtn" type="button">Sair</button>
+</nav>
 
-  <script src="../js/api.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/tutor-home.js"></script>
+<script src="../js/api.js"></script>
+<script src="../js/auth.js"></script>
+<script src="../js/tutor-home.js"></script>
+
 </body>
 </html>
