--- a/frontend/pages/aluno-home.html
+++ b/frontend/pages/aluno-home.html
@@ -18,12 +18,32 @@
   <a href="aluno-agendamentos.html">Agendamentos</a> |
   <a href="aluno-materiais.html">Materiais</a> |
   <a href="perfil.html">Perfil</a> |
+  <a href="sobre.html">Sobre</a> |
   <button id="logoutBtn" type="button">Sair</button>
 </nav>
 
 <script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
 <script src="../js/aluno-home.js"></script>
+
+<footer class="footer">
+  <p>
+    © 2026 – VivaEdu
+  </p>
+
+  <p>
+    Projeto acadêmico desenvolvido para fins educacionais.
+    Não possui finalidade comercial.
+  </p>
+
+  <p>
+    Desenvolvido por
+    <strong>Luiz Gustavo Brito</strong>,
+    <strong>Vanessa Beatriz</strong> e
+    <strong>Samuel Marcos Souza</strong>
+  </p>
+</footer>
+
 
 </body>
 </html>
