--- a/frontend/pages/cadastro.html
+++ b/frontend/pages/cadastro.html
@@ -7,36 +7,83 @@
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro | VivaEdu</title>
-  <link rel="stylesheet" href="../css/style.css">
+
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/auth.css">
 </head>
 <body>
 
-<h1>Cadastro VivaEdu</h1>
+  <main class="auth-wrap">
+    <section class="auth-brand">
+      <div class="brand-box">
+        <img src="../src/icons/logo-vivaedu-branca.png" alt="VivaEdu">
+      </div>
+    </section>
 
-<form id="cadastroForm">
+    <section class="auth-form-side">
+      <div style="width:100%;">
+        <div class="auth-card">
+          <div class="auth-title">Crie sua conta</div>
 
-  <input type="text" id="nome" placeholder="Nome completo" required>
-  <input type="text" id="cpf" placeholder="CPF (somente números)" required>
-  <input type="email" id="email" placeholder="E-mail" required>
-  <input type="email" id="confirmarEmail" placeholder="Confirme seu e-mail" required>
-  <input type="password" id="senha" placeholder="Senha" required>
-  <input type="password" id="confirmarSenha" placeholder="Confirme sua senha" required>
+          <form id="cadastroForm">
+            <div class="auth-field">
+              <div class="auth-label">Nome</div>
+              <input type="text" id="nome" placeholder="Nome completo" required>
+            </div>
 
-  <select id="tipo" required>
-    <option value="ALUNO">Aluno</option>
-    <option value="TUTOR">Tutor</option>
-  </select>
+            <div class="auth-field">
+              <div class="auth-label">CPF</div>
+              <input type="text" id="cpf" placeholder="CPF (somente números)" required>
+            </div>
 
-  <button type="submit">Cadastrar</button>
-</form>
+            <div class="auth-field">
+              <div class="auth-label">E-mail</div>
+              <input type="email" id="email" placeholder="E-mail" required>
+            </div>
 
-<p>
-  Já tem conta?
-  <a href="login.html">Voltar para login</a>
-</p>
+            <div class="auth-field">
+              <div class="auth-label">Confirme seu e-mail</div>
+              <input type="email" id="confirmarEmail" placeholder="Confirme seu e-mail" required>
+            </div>
 
-<script src="../js/api.js"></script>
-<script src="../js/cadastro.js"></script>
+            <div class="auth-field">
+              <div class="auth-label">Senha</div>
+              <input type="password" id="senha" placeholder="Senha" required>
+            </div>
 
+            <div class="auth-field">
+              <div class="auth-label">Confirme sua senha</div>
+              <input type="password" id="confirmarSenha" placeholder="Confirme sua senha" required>
+            </div>
+
+            <!-- temporário pro mock -->
+            <div class="auth-field">
+              <select id="tipo" required>
+                <option value="ALUNO">Aluno</option>
+                <option value="TUTOR">Tutor</option>
+              </select>
+            </div>
+
+            <div class="auth-actions">
+              <button class="btn btn-primary" type="submit">Cadastrar</button>
+            </div>
+          </form>
+        </div>
+
+        <div class="auth-bottom">
+          Já tem conta? <a href="login.html">Voltar para login</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>© 2026 – VivaEdu</p>
+    <p>Projeto acadêmico desenvolvido para fins educacionais. Não possui finalidade comercial.</p>
+    <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
+  </footer>
+
+  <script src="../js/api.js"></script>
+  <script src="../js/cadastro.js"></script>
 </body>
 </html>
