Finalizando a estilização das paginas.

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -42,6 +42,7 @@
               <select id="tipo" required>
                 <option value="ALUNO">Aluno</option>
                 <option value="TUTOR">Tutor</option>
+                <option value="COORDENADOR">Coordenador</option>
               </select>
             </div>
 
