--- a/frontend/pages/aluno-agendamentos.html
+++ b/frontend/pages/aluno-agendamentos.html
@@ -7,19 +7,44 @@
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agendamentos | Aluno</title>
+
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/app.css">
 </head>
 <body>
 
-  <h1>Meus Agendamentos</h1>
+<header class="app-header">
+  <div class="container app-bar">
+    <div class="brand-left">
+      <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
+      <div>
+       
+        <div class="brand-name">Meus Agendamentos</div>
+      </div>
+    </div>
 
-  <a href="aluno-home.html">← Voltar</a>
+    <nav class="app-nav">
+      <a href="aluno-home.html">Home</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="perfil.html">Perfil</a>
+      <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
+    </nav>
+  </div>
+</header>
 
+<main class="container page">
+  <div class="page-title">Meus Agendamentos</div>
   <div id="listaAgendamentos"></div>
+</main>
 
-  <script src="../js/api.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/aluno-agendamentos.js"></script>
+<footer class="footer">
+  <p>© 2026 – VivaEdu</p>
+  <p>Projeto acadêmico desenvolvido para fins educacionais. Não possui finalidade comercial.</p>
+  <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
+</footer>
 
-  
+<script src="../js/api.js"></script>
+<script src="../js/auth.js"></script>
+<script src="../js/aluno-agendamentos.js"></script>
 </body>
 </html>
