--- a/frontend/pages/chat.html
+++ b/frontend/pages/chat.html
@@ -2,37 +2,69 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-
-  <!-- no-cache -->
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Chat | VivaEdu</title>
-  <link rel="stylesheet" href="../css/style.css">
+
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../css/chat.css">
 </head>
 <body>
 
-  <h1>Chat</h1>
+<header class="app-header">
+  <div class="container app-bar">
+    <div class="brand-left">
+      <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
+      <div>
 
-  <div id="chatInfo" style="margin-bottom: 10px;"></div>
+        <div class="brand-name">Chat</div>
+      </div>
+    </div>
 
-  <div id="messages" style="border:1px solid #ccc; padding:10px; height: 320px; overflow:auto; margin-bottom:10px;"></div>
+    <nav class="app-nav">
+      <button id="btnVoltar" class="btn btn-outline" type="button">Voltar</button>
+    </nav>
+  </div>
+</header>
 
-  <form id="chatForm">
-    <input id="msgInput" type="text" placeholder="Digite sua mensagem..." required style="width: 70%;">
-    <button type="submit">Enviar</button>
-  </form>
+<main class="container page">
+  <div class="page-title">Chat</div>
 
-  <p style="margin-top: 10px;">
-    <button id="btnVoltar">← Voltar</button>
-  </p>
+  <div class="chat-wrap">
+    <div class="chat-top">
+      <div class="chat-peer">
+        <img id="peerAvatar" class="peer-avatar" alt="Foto">
+        <div class="peer-meta">
+          <div id="peerName" class="peer-name">—</div>
+          <div id="peerSub" class="peer-sub">—</div>
+        </div>
+      </div>
 
-  <script src="../js/api.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/chat.js"></script>
+      <div style="color:var(--muted); font-weight:800; font-size:12px;">
+        Thread: <span id="threadId">—</span>
+      </div>
+    </div>
 
-  
+    <div id="messages" class="chat-body"></div>
+
+    <form id="chatForm" class="chat-form">
+      <input id="msgInput" type="text" placeholder="Digite sua mensagem..." required>
+      <button class="btn btn-primary" type="submit">Enviar</button>
+    </form>
+  </div>
+</main>
+
+<footer class="footer">
+  <p>© 2026 – VivaEdu</p>
+  <p>Projeto acadêmico desenvolvido para fins educacionais. Não possui finalidade comercial.</p>
+  <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
+</footer>
+
+<script src="../js/auth.js"></script>
+<script src="../js/chat.js"></script>
 </body>
 </html>
