--- a/frontend/pages/coordenador-home.html
+++ b/frontend/pages/coordenador-home.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materiais | Tutor</title>
+  <title>Coordenador | VivaEdu</title>
 
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/app.css">
@@ -19,14 +19,12 @@
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
         
-        <div class="brand-name">Materiais do Tutor</div>
+        <div class="brand-name">Área do Coordenador</div>
       </div>
     </div>
 
     <nav class="app-nav">
-      <a href="tutor-home.html">Home</a>
-      <a href="tutor-aulas.html">Aulas</a>
-      <a href="tutor-chats.html">Chats</a>
+      <a href="sobre.html">Sobre</a>
       <a href="perfil.html">Perfil</a>
       <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
     </nav>
@@ -34,19 +32,36 @@
 </header>
 
 <main class="container page">
-  <div class="page-title">Materiais</div>
+  <div class="page-title">Painel do Coordenador</div>
 
-  <div class="list-card">
-    <h3 style="margin:0 0 10px;color:var(--brand);">Enviar Material</h3>
+  <div class="cards">
+    <a class="card-tile" href="coordenador-alunos.html">
+      <img src="../src/icons/alunos.png" alt="">
+      <h3>Alunos cadastrados</h3>
+    </a>
 
-    <form id="materialForm">
-      <input type="text" id="titulo" placeholder="Título do material" required>
-      <input type="file" id="arquivo" required>
-      <button class="btn btn-primary" type="submit">Enviar Material</button>
-    </form>
+    <a class="card-tile" href="coordenador-tutores.html">
+      <img src="../src/icons/tutores.png" alt="">
+      <h3>Tutores cadastrados</h3>
+    </a>
+
+    <a class="card-tile" href="coordenador-voluntarios.html">
+      <img src="../src/icons/espera.png" alt="">
+      <h3>Validar voluntários</h3>
+    </a>
+
+    <a class="card-tile" href="coordenador-relatorios.html">
+      <img src="../src/icons/relatorio.png" alt="">
+      <h3>Relatórios</h3>
+    </a>
+
+    <a class="card-tile" href="coordenador-aulas.html">
+  <img src="../src/icons/aulas.png" alt="">
+  <h3>Aulas cadastradas</h3>
+</a>
+
+
   </div>
-
-  <div id="listaMateriais"></div>
 </main>
 
 <footer class="footer">
@@ -55,8 +70,7 @@
   <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
 </footer>
 
-<script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
-<script src="../js/tutor-materiais.js"></script>
+<script src="../js/coordenador-home.js"></script>
 </body>
 </html>
