--- a/frontend/pages/coordenador-relatorios.html
+++ b/frontend/pages/coordenador-relatorios.html
@@ -6,7 +6,8 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materiais | Tutor</title>
+
+  <title>Relatórios | Coordenador</title>
 
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/app.css">
@@ -18,15 +19,13 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-        
-        <div class="brand-name">Materiais do Tutor</div>
+        <div class="brand-name">VivaEdu</div>
+        <div class="brand-sub">Relatórios</div>
       </div>
     </div>
 
     <nav class="app-nav">
-      <a href="tutor-home.html">Home</a>
-      <a href="tutor-aulas.html">Aulas</a>
-      <a href="tutor-chats.html">Chats</a>
+      <a href="coordenador-home.html">Home</a>
       <a href="perfil.html">Perfil</a>
       <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
     </nav>
@@ -34,19 +33,17 @@
 </header>
 
 <main class="container page">
-  <div class="page-title">Materiais</div>
+  <div class="page-title">Relatórios enviados</div>
 
   <div class="list-card">
-    <h3 style="margin:0 0 10px;color:var(--brand);">Enviar Material</h3>
-
-    <form id="materialForm">
-      <input type="text" id="titulo" placeholder="Título do material" required>
-      <input type="file" id="arquivo" required>
-      <button class="btn btn-primary" type="submit">Enviar Material</button>
-    </form>
+    <strong>O que aparece aqui?</strong>
+    <p style="margin:8px 0 0; color:var(--muted);">
+      Relatórios anexados pelo Tutor ao finalizar uma aula (mock via localStorage).  
+      No back-end, essa tela vai consumir a API de relatórios.
+    </p>
   </div>
 
-  <div id="listaMateriais"></div>
+  <div id="listaRelatorios"></div>
 </main>
 
 <footer class="footer">
@@ -55,8 +52,7 @@
   <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
 </footer>
 
-<script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
-<script src="../js/tutor-materiais.js"></script>
+<script src="../js/coordenador-relatorios.js"></script>
 </body>
 </html>
