--- a/frontend/pages/coordenador-voluntarios.html
+++ b/frontend/pages/coordenador-voluntarios.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materiais | Tutor</title>
+  <title>Validar Voluntários | Coordenador</title>
 
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/app.css">
@@ -18,15 +18,14 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-        
-        <div class="brand-name">Materiais do Tutor</div>
+    
+        <div class="brand-name">Validação de Voluntários</div>
       </div>
     </div>
 
     <nav class="app-nav">
-      <a href="tutor-home.html">Home</a>
-      <a href="tutor-aulas.html">Aulas</a>
-      <a href="tutor-chats.html">Chats</a>
+      <a href="coordenador-home.html">Home</a>
+      <a href="sobre.html">Sobre</a>
       <a href="perfil.html">Perfil</a>
       <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
     </nav>
@@ -34,19 +33,9 @@
 </header>
 
 <main class="container page">
-  <div class="page-title">Materiais</div>
+  <div class="page-title">Validar Voluntários</div>
 
-  <div class="list-card">
-    <h3 style="margin:0 0 10px;color:var(--brand);">Enviar Material</h3>
-
-    <form id="materialForm">
-      <input type="text" id="titulo" placeholder="Título do material" required>
-      <input type="file" id="arquivo" required>
-      <button class="btn btn-primary" type="submit">Enviar Material</button>
-    </form>
-  </div>
-
-  <div id="listaMateriais"></div>
+  <div id="listaVoluntarios"></div>
 </main>
 
 <footer class="footer">
@@ -57,6 +46,6 @@
 
 <script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
-<script src="../js/tutor-materiais.js"></script>
+<script src="../js/coordenador-voluntarios.js"></script>
 </body>
 </html>
