--- a/frontend/pages/sobre.html
+++ b/frontend/pages/sobre.html
@@ -2,72 +2,77 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Sobre | VivaEdu</title>
-  <link rel="stylesheet" href="../css/style.css">
+
+  <!-- CSS base do sistema -->
+  <link rel="stylesheet" href="../css/base.css">
+  <!-- CSS exclusivo da página -->
+  <link rel="stylesheet" href="../css/sobre.css">
 </head>
 <body>
 
-  <h1>Sobre o VivaEdu</h1>
+<header class="sobre-header">
+  <div class="header-content">
+    
+    <button id="btnVoltar" class="btn-voltar">Voltar</button>
+  </div>
+</header>
 
-  <nav>
-    <a href="aluno-home.html" id="linkHomeAluno">Home Aluno</a>
-    <a href="tutor-home.html" id="linkHomeTutor">Home Tutor</a>
-    |
-    <a href="perfil.html">Perfil</a>
-    |
-    <button id="logoutBtn" type="button">Sair</button>
-  </nav>
+<main class="sobre-container">
+  <div class="sobre-card">
 
-  <hr>
+    <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu" class="sobre-logo">
 
-  <section>
-    <h2>O que é</h2>
-    <p>
-      O VivaEdu é uma plataforma web de reforço escolar que conecta alunos a tutores/voluntários
-      para a realização de aulas de apoio, com agendamento, materiais de estudo e comunicação via chat.
-    </p>
+    <h1>Sobre o VivaEdu</h1>
 
-    <h2>Principais recursos</h2>
-    <ul>
-      <li>Cadastro e login com perfis de Aluno e Tutor</li>
-      <li>Criação e gerenciamento de aulas pelo Tutor</li>
-      <li>Agendamento de aulas pelo Aluno</li>
-      <li>Localização da aula com visualização no mapa</li>
-      <li>Chat entre aluno e tutor</li>
-      <li>Materiais de apoio (upload pelo tutor e acesso pelo aluno)</li>
-    </ul>
+    <section>
+      <h2>O que é</h2>
+      <p>
+        O VivaEdu é uma plataforma web de reforço escolar que conecta alunos
+        a tutores e voluntários, facilitando o agendamento de aulas,
+        acesso a materiais e comunicação entre as partes.
+      </p>
+    </section>
 
-    <h2>Objetivo</h2>
-    <p>
-      Facilitar o acesso ao reforço escolar e organizar o processo de tutoria, tornando mais simples
-      para o aluno encontrar apoio e para o tutor gerenciar aulas e materiais.
-    </p>
+    <section>
+      <h2>Principais recursos</h2>
+      <ul>
+        <li>Cadastro e login com perfis de Aluno, Tutor e Coordenador</li>
+        <li>Criação e gerenciamento de aulas</li>
+        <li>Agendamento e acompanhamento de aulas</li>
+        <li>Localização das aulas com visualização em mapa</li>
+        <li>Chat entre aluno e tutor</li>
+        <li>Materiais de apoio e relatórios de aula</li>
+      </ul>
+    </section>
 
-    <h2>Contato</h2>
-    <p>
-      Caso precise de suporte, procure um tutor responsável ou a equipe do projeto.
-    </p>
-  </section>
+    <section>
+      <h2>Objetivo</h2>
+      <p>
+        Facilitar o acesso ao reforço escolar e organizar o processo
+        de tutoria, tornando o aprendizado mais acessível e estruturado.
+      </p>
+    </section>
 
-  <script src="../js/auth.js"></script>
-  <script src="../js/sobre.js"></script>
+    <section class="aviso">
+      <h2>Aviso</h2>
+      <p>
+        Este é um projeto acadêmico desenvolvido exclusivamente para fins
+        educacionais e não possui finalidade comercial.
+      </p>
+    </section>
 
-  <footer class="footer">
-  <p>
-    © 2026 – VivaEdu
-  </p>
+  </div>
+</main>
 
-  <p>
-    Projeto acadêmico desenvolvido para fins educacionais.
-    Não possui finalidade comercial.
-  </p>
-
+<footer class="footer">
+  <p>© 2026 – VivaEdu</p>
+  <p>Projeto acadêmico desenvolvido para fins educacionais.</p>
   <p>
     Desenvolvido por
     <strong>Luiz Gustavo Brito</strong>,
@@ -76,6 +81,6 @@
   </p>
 </footer>
 
-
+<script src="../js/sobre.js"></script>
 </body>
 </html>
