Correção na home do coordenador.

--- a/frontend/pages/coordenador-tutores.html
+++ b/frontend/pages/coordenador-tutores.html
@@ -18,8 +18,8 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-        <div class="brand-name">VivaEdu</div>
-        <div class="brand-sub">Tutores cadastrados</div>
+      
+        <div class="brand-name">Tutores cadastrados</div>
       </div>
     </div>
 
