--- a/frontend/pages/coordenador-alunos.html
+++ b/frontend/pages/coordenador-alunos.html
@@ -18,8 +18,8 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-        <div class="brand-name">VivaEdu</div>
-        <div class="brand-sub">Alunos cadastrados</div>
+       
+        <div class="brand-name">Alunos cadastrados</div>
       </div>
     </div>
 
