--- a/frontend/pages/cadastro.html
+++ b/frontend/pages/cadastro.html
@@ -61,6 +61,7 @@
               <select id="tipo" required>
                 <option value="ALUNO">Aluno</option>
                 <option value="TUTOR">Tutor</option>
+                <option value="Coordenador">Coordenador</option>
               </select>
             </div>
 
