tutor confirma/recusa agendamento de aula, aluno solicita aula e aguarda

--- a/frontend/pages/tutor-home.html
+++ b/frontend/pages/tutor-home.html
@@ -40,6 +40,12 @@
       <h3>Minhas Aulas</h3>
     </a>
 
+    <div class="cards">
+    <a class="card-tile" href="tutor-agendamentos.html">
+      <img src="../src/icons/agendamentos.png" alt="">
+      <h3>Agendamentos</h3>
+    </a>
+
     <a class="card-tile" href="tutor-materiais.html">
       <img src="../src/icons/materiais.png" alt="">
       <h3>Materiais</h3>
