--- a/frontend/pages/tutor-materiais.html
+++ b/frontend/pages/tutor-materiais.html
@@ -25,6 +25,7 @@
 
     <nav class="app-nav">
       <a href="tutor-home.html">Home</a>
+      <a href="tutor-agendamentos.html">Agendamentos</a>
       <a href="tutor-aulas.html">Aulas</a>
       <a href="tutor-chats.html">Chats</a>
       <a href="perfil.html">Perfil</a>
