integrando aulas e agendamentos com neo4j(fluxo(Tutor)-[:OFERECE]->(Aula) ao criar aula + enriquecer retornos para front

--- a/frontend/pages/tutor-home.html
+++ b/frontend/pages/tutor-home.html
@@ -32,7 +32,7 @@
 </header>
 
 <main class="container page">
-  <div class="page-title">Tela Inicial</div>
+  <div class="page-title">Bem vindo(a)!</div>
 
   <div class="cards">
     <a class="card-tile" href="tutor-aulas.html">
