criando relatorios de aula e listando relatórios para coordenador

--- a/frontend/pages/coordenador-relatorios.html
+++ b/frontend/pages/coordenador-relatorios.html
@@ -36,7 +36,6 @@
   <div class="page-title">Relatórios enviados</div>
 
   <div class="list-card">
-    <strong>O que aparece aqui?</strong>
     <p style="margin:8px 0 0; color:var(--muted);">
       Relatórios anexados pelo Tutor ao finalizar uma aula (mock via localStorage).  
       No back-end, essa tela vai consumir a API de relatórios.
@@ -53,6 +52,7 @@
 </footer>
 
 <script src="../js/auth.js"></script>
+<script src="../js/api.js"></script>
 <script src="../js/coordenador-relatorios.js"></script>
 </body>
 </html>
