--- a/frontend/pages/tutor-local-picker.html
+++ b/frontend/pages/tutor-local-picker.html
@@ -11,8 +11,9 @@
 
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/app.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
 <body>
@@ -22,7 +23,6 @@
       <div class="brand-left">
         <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
         <div>
-
           <div class="brand-name">Selecionar Local (Mapa)</div>
         </div>
       </div>
@@ -37,23 +37,37 @@
   <main class="container page">
     <div class="page-title">Selecionar Local</div>
 
+    <!-- ✅ MAPA -->
     <div class="list-card">
-      <strong>Observação:</strong>
-      <p style="margin-top:8px;">
-        Aqui depois entra o Leaflet + Nominatim + PostGIS. Por enquanto é um placeholder para estruturar o fluxo.
+      <h3 style="margin:0 0 10px;color:var(--brand);">Clique no mapa para selecionar</h3>
+
+      <div id="map" style="
+        width: 100%;
+        height: 420px;
+        border-radius: 14px;
+        border: 1px solid var(--border);
+      "></div>
+
+      <p style="margin:10px 0 0;color:var(--muted);">
+        Dica: clique no mapa para preencher latitude/longitude automaticamente.
       </p>
     </div>
 
+    <!-- ✅ CADASTRO LOCAL -->
     <div class="list-card">
-      <h3 style="margin:0 0 10px;color:var(--brand);">Cadastrar local (simulação)</h3>
+      <h3 style="margin:0 0 10px;color:var(--brand);">Cadastrar local</h3>
 
       <form id="localForm">
-        <input type="text" id="nome" placeholder="Nome do local" required>
-        <input type="text" id="lat" placeholder="Latitude" required>
-        <input type="text" id="lng" placeholder="Longitude" required>
+        <input type="text" id="nome" placeholder="Nome do local (ex: Escola X)" required>
 
-        <button class="btn btn-outline" type="button" id="btnGeo">Usar minha localização</button>
-        <button class="btn btn-primary" type="submit">Salvar e Selecionar</button>
+        <!-- lat/lng preenchidos pelo mapa, mas mantemos visível -->
+        <input type="text" id="lat" placeholder="Latitude (clique no mapa)" required readonly>
+        <input type="text" id="lng" placeholder="Longitude (clique no mapa)" required readonly>
+
+        <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top:10px;">
+          <button class="btn btn-outline" type="button" id="btnGeo">Usar minha localização</button>
+          <button class="btn btn-primary" type="submit">Salvar e Selecionar</button>
+        </div>
       </form>
     </div>
   </main>
@@ -67,8 +81,11 @@
 
   <script src="../js/api.js"></script>
   <script src="../js/auth.js"></script>
-  <script src="../js/tutor-local-picker.js"></script>
+
+  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <script src="../js/tutor-local-picker.js"></script>
 
 </body>
 
