arrumando back para passar data e hora da aula para o aluno + opção de ver no mapa)

--- a/frontend/pages/tutor-aulas.html
+++ b/frontend/pages/tutor-aulas.html
@@ -64,7 +64,7 @@
         <button class="btn btn-primary" type="submit">Salvar Aula</button>
         <button class="btn btn-outline" type="button" id="cancelarEdicao">Cancelar</button>
 
-        <div class="hint">* O local será escolhido no mapa (placeholder). Depois o back coloca Leaflet/PostGIS.</div>
+        <div class="hint">* Selecione o local da aula no mapa</div>
       </form>
     </div>
 
