listando aulas, tutores e alunos para o coordenador - finalizado

--- a/frontend/pages/coordenador-alunos.html
+++ b/frontend/pages/coordenador-alunos.html
@@ -18,7 +18,6 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-       
         <div class="brand-name">Alunos cadastrados</div>
       </div>
     </div>
@@ -46,6 +45,7 @@
   <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
 </footer>
 
+<script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
 <script src="../js/coordenador-alunos.js"></script>
 </body>
