--- a/frontend/pages/coordenador-aulas.html
+++ b/frontend/pages/coordenador-aulas.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aulas | Coordenador</title>
 
@@ -15,14 +18,13 @@
     <div class="brand-left">
       <img src="../src/icons/logo-vivaedu.png" alt="VivaEdu">
       <div>
-        <div class="brand-name">VivaEdu</div>
-        <div class="brand-sub">Aulas cadastradas</div>
+        <div class="brand-name">Aulas cadastradas</div>
       </div>
     </div>
 
     <nav class="app-nav">
       <a href="coordenador-home.html">Home</a>
-      <button id="logoutBtn" class="btn btn-outline">Sair</button>
+      <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
     </nav>
   </div>
 </header>
@@ -35,9 +37,11 @@
 
 <footer class="footer">
   <p>© 2026 – VivaEdu</p>
-  <p>Projeto acadêmico desenvolvido para fins educacionais.</p>
+  <p>Projeto acadêmico desenvolvido para fins educacionais. Não possui finalidade comercial.</p>
+  <p>Desenvolvido por <strong>Luiz Gustavo Brito</strong>, <strong>Vanessa Beatriz</strong> e <strong>Samuel Marcos Souza</strong></p>
 </footer>
 
+<script src="../js/api.js"></script>
 <script src="../js/auth.js"></script>
 <script src="../js/coordenador-aulas.js"></script>
 </body>
